--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2051,7 +2051,6 @@ ul.actions.special {
 
 .wrapper {
   position: relative;
-  padding: 6em 0 9em 0;
 }
 
 .wrapper .title {
@@ -2150,39 +2149,39 @@ ul.actions.special {
 
 /* Header */
 
-	#header {
-		display: -moz-flex;
-		display: -webkit-flex;
-		display: -ms-flex;
-		display: flex;
-		-moz-align-items: center;
-		-webkit-align-items: center;
-		-ms-align-items: center;
-		align-items: center;
-		-moz-justify-content: center;
-		-webkit-justify-content: center;
-		-ms-justify-content: center;
-		justify-content: center;
-		position: relative;
-		height: 13em;
-		background: url("../../images/banner.jpg") center center;
-		background-size: cover;
-		padding: 0;
-	}
+#header {
+  display: -moz-flex;
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  -moz-align-items: center;
+  -webkit-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -moz-justify-content: center;
+  -webkit-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  position: relative;
+  height: 13em;
+  background: url("../../images/banner.jpg") center center;
+  background-size: cover;
+  padding: 0;
+}
 
-		#header:before {
-			content: '';
-			position: absolute;
-			top: 0;
-			left: 0;
-			width: 100%;
-			height: 100%;
-			background: url("images/overlay.png");
-		}
+#header:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url("images/overlay.png");
+}
 
-		.homepage #header {
-			height: 20em;
-		}
+.homepage #header {
+  height: 20em;
+}
 
 /* Logo */
 
