--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1769,7 +1769,7 @@ input[type="submit"].style1,
 input[type="reset"].style1,
 button.style1,
 .button.style1 {
-  background: #e97770 url("images/overlay.png");
+  background: #40a9ff url("images/overlay.png");
   color: #fff;
 }
 
@@ -2369,7 +2369,7 @@ ul.actions.special {
 }
 
 #highlights .highlight h3 {
-  color: #e97770;
+  color: #40a9ff;
   margin: 0 0 0.75em 0;
   font-size: 1.15em;
   letter-spacing: 0.05em;
