--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1769,7 +1769,7 @@ input[type="submit"].style1,
 input[type="reset"].style1,
 button.style1,
 .button.style1 {
-  background: #40a9ff url("images/overlay.png");
+  background: #40a9ff;
   color: #fff;
 }
 
@@ -1820,7 +1820,7 @@ input[type="submit"].style3,
 input[type="reset"].style3,
 button.style3,
 .button.style3 {
-  background: #2f333b url("images/overlay.png");
+  background: #2f333b;
   color: #fff;
 }
 
@@ -1954,7 +1954,7 @@ ul.actions.special {
 .feature-list h3:before {
   display: block;
   color: #fff;
-  background: #2f333b url("images/overlay.png");
+  background: #2f333b;
   border-radius: 2.5em;
   text-align: center;
   width: 2.5em;
@@ -2097,13 +2097,13 @@ ul.actions.special {
 }
 
 .wrapper.style1 {
-  background: #e97770 url("images/overlay.png");
+  background: #e97770;
   color: #eee;
   color: rgba(255, 255, 255, 0.75);
 }
 
 .wrapper.style1 .title {
-  background: #e97770 url("images/overlay.png");
+  background: #e97770;
   color: #fff;
 }
 
@@ -2129,11 +2129,11 @@ ul.actions.special {
 }
 
 .wrapper.style3 {
-  background: #f3f3f3 url("images/overlay.png");
+  background: #f3f3f3;
 }
 
 .wrapper.style3 .title {
-  background: #f3f3f3 url("images/overlay.png");
+  background: #f3f3f3;
   color: #484d55;
 }
 
@@ -2164,7 +2164,7 @@ ul.actions.special {
   justify-content: center;
   position: relative;
   height: 13em;
-  background: url("../../images/banner.jpg") center center;
+  background: #212735;
   background-size: cover;
   padding: 0;
 }
@@ -2176,7 +2176,6 @@ ul.actions.special {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url("images/overlay.png");
 }
 
 .homepage #header {
@@ -2267,7 +2266,7 @@ ul.actions.special {
 }
 
 .dropotron {
-  background: #222835 url("images/overlay.png");
+  background: #222835;
   background-color: rgba(44, 50, 63, 0.925);
   padding: 1.25em 1em 1.25em 1em;
   border-radius: 0.35em;
@@ -2380,7 +2379,7 @@ ul.actions.special {
 /* Footer */
 
 #footer {
-  background: #282b34 url("images/overlay.png");
+  background: #282b34;
   color: #eee;
   color: rgba(255, 255, 255, 0.5);
   padding-bottom: 6em;
@@ -2455,7 +2454,7 @@ ul.actions.special {
 }
 
 #footer .title {
-  background: #282b34 url("images/overlay.png");
+  background: #282b34;
   color: #eee;
 }
 
@@ -2482,7 +2481,7 @@ ul.actions.special {
 }
 
 #footer .feature-list h3:before {
-  background: #3d4249 url("images/overlay.png");
+  background: #3d4249;
 }
 
 /* Copyright */
@@ -2785,7 +2784,7 @@ ul.actions.special {
     top: 0;
     width: 275px;
     z-index: 10002;
-    background: #242730 url("images/overlay.png");
+    background: #242730;
     box-shadow: inset -3px 0px 4px 0px rgba(0, 0, 0, 0.1);
   }
 
