delete shadow, add padding to the origin

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2051,6 +2051,7 @@ ul.actions.special {
 
 .wrapper {
   position: relative;
+  padding: 4em 0 7em 0;
 }
 
 .wrapper .title {
@@ -2079,7 +2080,7 @@ ul.actions.special {
   left: -35px;
   width: 35px;
   height: 38px;
-  background: url("images/shadow.png");
+  
 }
 
 .wrapper .title:after {
@@ -2093,7 +2094,7 @@ ul.actions.special {
   right: -35px;
   width: 35px;
   height: 38px;
-  background: url("images/shadow.png");
+  
 }
 
 .wrapper.style1 {
