--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,11 +1,18 @@
-.news{
-    background-color: #ffec3d;
-    width: 100%;
+.news {
+  padding: 0px 10px;
+  background-color: #ffec3d;
+  width: 100%;
+  height: 13px;
+  line-height: 13px;
 }
 
-.navigation{
-    position: -webkit-sticky; /* Safari */
-    position: sticky;
-    top: 0;
-    z-index: 20000;
+.news-text {
+  font-size: xx-small;
+}
+
+.navigation {
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 0;
+  z-index: 20000;
 }
