--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -2,12 +2,11 @@
   padding: 0px 10px;
   background-color: #ffec3d;
   width: 100%;
-  height: 13px;
-  line-height: 13px;
-}
-
-.news-text {
+  height: 15px;
+  line-height: 15px;
   font-size: xx-small;
+  font-family: Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol,
+    Noto Color Emoji;
 }
 
 .navigation {
