--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,6 @@
 @import url("home.css");
+@import url("container.css");
+@import url("icon.css");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,900");
 
 html,
@@ -279,38 +281,6 @@ table,
 blockquote,
 form {
   margin-bottom: 2em;
-}
-
-/* Container */
-
-.container {
-  margin: 0 auto;
-  max-width: 100%;
-  width: 0em;
-}
-
-@media screen and (max-width: 1680px) {
-  .container {
-    width: 70em;
-  }
-}
-
-@media screen and (max-width: 1280px) {
-  .container {
-    width: calc(100% - 100px);
-  }
-}
-
-@media screen and (max-width: 980px) {
-  .container {
-    width: calc(100% - 100px);
-  }
-}
-
-@media screen and (max-width: 736px) {
-  .container {
-    width: calc(100% - 40px);
-  }
 }
 
 /* Row */
@@ -1966,43 +1936,6 @@ ul.actions.special {
   font-size: 0.8em;
 }
 
-/* Icons */
-
-.icon {
-  text-decoration: none;
-  text-decoration: none;
-}
-
-.icon:before {
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  display: inline-block;
-  font-style: normal;
-  font-variant: normal;
-  text-rendering: auto;
-  line-height: 1;
-  text-transform: none !important;
-  font-family: "Font Awesome 5 Free";
-  font-weight: 400;
-}
-
-.icon:before {
-  line-height: inherit;
-  font-size: 1.25em;
-}
-
-.icon > .label {
-  display: none;
-}
-
-.icon.solid:before {
-  font-weight: 900;
-}
-
-.icon.brands:before {
-  font-family: "Font Awesome 5 Brands";
-}
-
 /* Wrapper */
 
 .wrapper {
@@ -2474,7 +2407,6 @@ ul.actions.special {
 
 @media screen and (max-width: 1680px) {
   /* Basic */
-
   body,
   input,
   textarea,
@@ -2487,7 +2419,6 @@ ul.actions.special {
 
 @media screen and (max-width: 1280px) {
   /* Basic */
-
   body,
   input,
   select,
@@ -2543,11 +2474,6 @@ ul.actions.special {
 }
 
 /* Medium */
-
-#navPanel,
-#titleBar {
-  display: none;
-}
 
 @media screen and (max-width: 980px) {
   /* Section/Article */
@@ -2704,10 +2630,10 @@ ul.actions.special {
   }
 
   #navPanel {
-    -moz-backface-visibility: hidden;
+    /* -moz-backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
     -ms-backface-visibility: hidden;
-    backface-visibility: hidden;
+    backface-visibility: hidden; */
     -moz-transform: translateX(-275px);
     -webkit-transform: translateX(-275px);
     -ms-transform: translateX(-275px);
