--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,8 @@
-@import url("home.css");
+@import url("navigation.css");
 @import url("container.css");
 @import url("icon.css");
+@import url("feature-list.css");
+@import url("news.css");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,900");
 
 html,
@@ -1882,60 +1884,6 @@ ul.actions.special {
   text-align: center;
 }
 
-/* Feature List */
-
-.feature-list {
-  max-width: 58em;
-  margin-left: auto;
-  margin-right: auto;
-  position: relative;
-  top: 0.75em;
-}
-
-.feature-list section {
-  border-top: solid 1px #eee;
-  padding-top: 3em;
-  padding-left: 5em;
-  position: relative;
-}
-
-@media screen and (min-width: 981px) {
-  .feature-list > .row > :nth-child(-n + 2) > section {
-    border-top: 0;
-    padding-top: 0;
-  }
-}
-
-.feature-list h3 {
-  color: #e97770 !important;
-  margin: -0.35em 0 0.75em 0;
-  font-size: 1.15em;
-  letter-spacing: 0.05em;
-}
-
-.feature-list h3:before {
-  display: block;
-  color: #fff;
-  background: #2f333b;
-  border-radius: 2.5em;
-  text-align: center;
-  width: 2.5em;
-  height: 2.5em;
-  line-height: 2.5em;
-  margin-right: 0.75em;
-  position: absolute;
-  left: 0;
-  margin-top: -0.5em;
-}
-
-.feature-list.small section {
-  padding-left: 3.5em;
-}
-
-.feature-list.small h3:before {
-  font-size: 0.8em;
-}
-
 /* Wrapper */
 
 .wrapper {
@@ -2029,41 +1977,6 @@ ul.actions.special {
   border: solid 10px #fff;
 }
 
-/* Header */
-
-#header {
-  display: -moz-flex;
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  -moz-align-items: center;
-  -webkit-align-items: center;
-  -ms-align-items: center;
-  align-items: center;
-  -moz-justify-content: center;
-  -webkit-justify-content: center;
-  -ms-justify-content: center;
-  justify-content: center;
-  position: relative;
-  height: 13em;
-  background: #212735;
-  background-size: cover;
-  padding: 0;
-}
-
-#header:before {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.homepage #header {
-  height: 5em;
-}
-
 /* Logo */
 
 #logo {
@@ -2089,111 +2002,6 @@ ul.actions.special {
   display: block;
   letter-spacing: 0.2em;
   font-size: 0.9em;
-}
-
-/* Nav */
-
-#nav {
-  position: absolute;
-  display: block;
-  width: 100%;
-  text-align: center;
-}
-
-#nav > ul {
-  display: inline-block;
-  border-radius: 0.35em;
-  box-shadow: inset 0px 0px 1px 1px rgba(255, 255, 255, 0.25);
-  padding: 0 1.5em 0 1.5em;
-}
-
-#nav > ul > li {
-  display: inline-block;
-  text-align: center;
-  padding: 0 1.5em 0 1.5em;
-}
-
-#nav > ul > li > ul {
-  display: none;
-}
-
-#nav > ul > li > a,
-#nav > ul > li > span {
-  display: block;
-  color: #eee;
-  color: rgba(255, 255, 255, 0.75);
-  text-transform: uppercase;
-  text-decoration: none;
-  font-size: 0.7em;
-  letter-spacing: 0.25em;
-  height: 5em;
-  line-height: 5em;
-  -moz-transition: all 0.25s ease-in-out;
-  -webkit-transition: all 0.25s ease-in-out;
-  -o-transition: all 0.25s ease-in-out;
-  -ms-transition: all 0.25s ease-in-out;
-  transition: all 0.25s ease-in-out;
-  outline: 0;
-}
-
-#nav > ul > li:hover > a {
-  color: #fff;
-}
-
-#nav > ul > li.active > a,
-#nav > ul > li.active > span {
-  color: #fff;
-}
-
-.dropotron {
-  background: #222835;
-  background-color: rgba(44, 50, 63, 0.925);
-  padding: 1.25em 1em 1.25em 1em;
-  border-radius: 0.35em;
-  box-shadow: inset 0px 0px 1px 1px rgba(255, 255, 255, 0.25);
-  min-width: 12em;
-  text-align: left;
-  margin-top: -1.25em;
-  margin-left: -1px;
-  list-style: none;
-}
-
-.dropotron.level-0 {
-  margin-top: -1px;
-  margin-left: 0;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
-}
-
-.dropotron a,
-.dropotron span {
-  -moz-transition: all 0.25s ease-in-out;
-  -webkit-transition: all 0.25s ease-in-out;
-  -ms-transition: all 0.25s ease-in-out;
-  transition: all 0.25s ease-in-out;
-  display: block;
-  color: #eee;
-  color: rgba(255, 255, 255, 0.75);
-  text-transform: uppercase;
-  text-decoration: none;
-  font-size: 0.7em;
-  letter-spacing: 0.25em;
-  border-top: solid 1px rgba(255, 255, 255, 0.15);
-  line-height: 3em;
-}
-
-.dropotron li {
-  padding-left: 0;
-}
-
-.dropotron li:first-child a,
-.dropotron li:first-child span {
-  border-top: 0;
-}
-
-.dropotron li:hover > a,
-.dropotron li:hover > span {
-  color: #fff;
 }
 
 /* Intro */
@@ -2233,14 +2041,6 @@ ul.actions.special {
 
 /* Features */
 
-#features header.style1 {
-  padding-bottom: 5em;
-}
-
-#features ul.actions {
-  margin-top: 5em;
-}
-
 /* Highlights */
 
 #highlights .highlight {
@@ -2249,7 +2049,7 @@ ul.actions.special {
 
 #highlights .highlight h3 {
   color: #40a9ff;
-  margin: 0 0 0.75em 0;
+
   font-size: 1.15em;
   letter-spacing: 0.05em;
 }
@@ -2338,7 +2138,6 @@ ul.actions.special {
 }
 
 #footer header.style1 {
-  margin-bottom: 6em;
   border-bottom: solid 1px rgba(255, 255, 255, 0.05);
 }
 
@@ -2461,7 +2260,6 @@ ul.actions.special {
   /* Footer */
 
   #footer header.style1 {
-    margin-bottom: 4em;
     border-bottom: solid 1px rgba(255, 255, 255, 0.05);
   }
 
@@ -2477,10 +2275,6 @@ ul.actions.special {
 
 @media screen and (max-width: 980px) {
   /* Section/Article */
-
-  header br {
-    display: none;
-  }
 
   /* Form */
 
@@ -2501,12 +2295,6 @@ ul.actions.special {
   .feature-list > .row > :first-child > section {
     border-top: 0;
     padding-top: 0;
-  }
-
-  /* Nav */
-
-  #nav {
-    display: none;
   }
 
   /* Logo */
@@ -2545,8 +2333,6 @@ ul.actions.special {
 }
 
 @media screen and (max-width: 980px) {
-  /* Nav */
-
   #page-wrapper {
     /* 隐藏元素 */
     -moz-backface-visibility: hidden;
@@ -2629,79 +2415,6 @@ ul.actions.special {
     background-color: rgba(92, 95, 103, 0.75);
   }
 
-  #navPanel {
-    /* -moz-backface-visibility: hidden;
-    -webkit-backface-visibility: hidden;
-    -ms-backface-visibility: hidden;
-    backface-visibility: hidden; */
-    -moz-transform: translateX(-275px);
-    -webkit-transform: translateX(-275px);
-    -ms-transform: translateX(-275px);
-    transform: translateX(-275px);
-    -moz-transition: -moz-transform 0.5s ease;
-    -webkit-transition: -webkit-transform 0.5s ease;
-    -ms-transition: -ms-transform 0.5s ease;
-    transition: transform 0.5s ease;
-    display: block;
-    height: 100%;
-    left: 0;
-    overflow-y: auto;
-    position: fixed;
-    top: 0;
-    width: 275px;
-    z-index: 10002;
-    /* background: #242730; */
-    background: #212735;
-    box-shadow: inset -3px 0px 4px 0px rgba(0, 0, 0, 0.1);
-  }
-
-  #navPanel .link {
-    display: block;
-    color: rgba(255, 255, 255, 0.5);
-    text-transform: uppercase;
-    text-decoration: none;
-    font-size: 0.85em;
-    letter-spacing: 0.15em;
-    text-decoration: none;
-    height: 44px;
-    line-height: 44px;
-    border-top: solid 1px rgba(255, 255, 255, 0.05);
-    margin: 0 15px 0 15px;
-  }
-
-  #navPanel .link:first-child {
-    border-top: 0;
-  }
-
-  #navPanel .indent-1 {
-    display: inline-block;
-    width: 1em;
-  }
-
-  #navPanel .indent-2 {
-    display: inline-block;
-    width: 2em;
-  }
-
-  #navPanel .indent-3 {
-    display: inline-block;
-    width: 3em;
-  }
-
-  #navPanel .indent-4 {
-    display: inline-block;
-    width: 4em;
-  }
-
-  #navPanel .indent-5 {
-    display: inline-block;
-    width: 5em;
-  }
-
-  #navPanel .depth-0 {
-    color: #fff;
-  }
-
   body.navPanel-visible #page-wrapper {
     -moz-transform: translateX(275px);
     -webkit-transform: translateX(275px);
@@ -2757,27 +2470,6 @@ ul.actions.special {
   section,
   article {
     clear: both;
-  }
-
-  header br {
-    display: none;
-  }
-
-  header.style1 {
-    padding: 0 0 1em 0;
-  }
-
-  header.style1 h2 {
-    font-size: 1.5em;
-    letter-spacing: 0.075em;
-    line-height: 1.25em;
-  }
-
-  header.style1 p {
-    font-size: 1em;
-    letter-spacing: 0;
-    display: block;
-    margin: 0;
   }
 
   /* Button */
@@ -2856,16 +2548,6 @@ ul.actions.special {
     height: 15px;
     bottom: -15px;
     background-size: 100% 100%;
-  }
-
-  /* Header */
-
-  #header {
-    height: 17em;
-  }
-
-  .homepage #header {
-    height: 5em;
   }
 
   /* Logo */
