--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -7,3 +7,30 @@
   background-color: #2f54eb;
   height: 64px;
 }
+
+.navigation-choice {
+  height: 64px;
+  line-height: 64px;
+  color: #ffffff;
+  font-size: 13px;
+  float: right;
+}
+
+.choice {
+  margin-left: 25px;
+  width: auto;
+  float: left;
+  color: #ffffff;
+}
+
+.github {
+  border: 1px solid #fff;
+  border-radius: 28px;
+  height: 30px;
+  line-height: 30px;
+  color: #fff;
+  padding: 0 16px;
+  margin-left: 20px;
+  margin-top: 17px;
+  margin-bottom: 17px;
+}
