--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -1,3 +1,4 @@
+/* navigation */
 .navigation {
   padding: 0px 20px;
   position: sticky;
@@ -37,14 +38,17 @@
   padding-top: -2px;
 }
 
+/* GitHub */
 .github {
+  margin-left: 25px;
+  margin-top: 17px;
+  margin-bottom: 17px;
+  padding: 0 16px;
+  width: auto;
+  float: left;
+  color: #ffffff;
   border: 1px solid #ffffff;
   border-radius: 28px;
   height: 30px;
   line-height: 30px;
-  color: #fff;
-  padding: 0 16px;
-  margin-left: 20px;
-  margin-top: 17px;
-  margin-bottom: 17px;
 }
