--- a/assets/css/logo.css
+++ b/assets/css/logo.css
@@ -1,6 +1,7 @@
 .logo {
-  height: 64px;
-  line-height: 64px;
+  margin-top: 7px;
+  height: 50px;
+  line-height: 25px;
   color: #ffffff;
   font-size: 20px;
   float: left;
