--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,6 +5,7 @@
 @import url("news.css");
 @import url("logo.css");
 @import url("whole.css");
+@import url("profile.css");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,900");
 
 html,
@@ -193,14 +194,14 @@ body,
 input,
 textarea,
 select {
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Ubuntu, "Helvetica Neue", Arial, sans-serif, Apple Color Emoji,
+    Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
   font-weight: 400;
   color: #919499;
   font-size: 14pt;
   line-height: 1.75em;
   letter-spacing: 0.025em;
-  font-family: Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol,
-    Noto Color Emoji;
 }
 
 h1,
@@ -2347,7 +2348,7 @@ ul.actions.special {
     text-rendering: auto;
     line-height: 1;
     text-transform: none !important;
-    font-family: "Font Awesome 5 Free";
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: 900;
   }
 
