调整一下文件位置

--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -1,3 +1,11 @@
+/* 顶端的warmmings */
+.news {
+  padding: 0px 50px;
+  background-color: #ffec3d;
+  width: 100%;
+  font-size: xx-small;
+}
+
 /* navigation */
 .navigation {
   padding: 0px 50px;
