--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,7 +4,7 @@
 @import url("feature-list.css");
 @import url("logo.css");
 @import url("whole.css");
-@import url("profile.css");
+@import url("bottom.css");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,900");
 
 html,
