--- a/assets/css/whole.css
+++ b/assets/css/whole.css
@@ -10,5 +10,6 @@
   position: relative;
   bottom: 64px;
   height: 700px;
-  background-image: linear-gradient(to right bottom, #21afd0, #6052cc);
+  background: linear-gradient(-45deg, rgba(130,29,200,1) 0%, rgb(33, 175, 208,1) 100%);
+  /* background-image: linear-gradient(to right bottom, #21afd0, rgba(147,26,222,0.83)); */
 }
