--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -5,8 +5,7 @@
   color: #ffffff;
   width: 100%;
   font-size: xx-small;
-  height: 15px;
-  line-height: 15px;
+  height: auto;
 }
 
 .news-text {
