--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,6 +5,7 @@
 @import url("logo.css");
 @import url("whole.css");
 @import url("bottom.css");
+@import url("home-ins.css");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,900");
 
 html,
