--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -198,7 +198,7 @@ select {
     Ubuntu, "Helvetica Neue", Arial, sans-serif, Apple Color Emoji,
     Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
   font-weight: 400;
-  color: #919499;
+  color: #ffffff;
   font-size: 14pt;
   line-height: 1.75em;
   letter-spacing: 0.025em;
