--- a/assets/css/home-ins.css
+++ b/assets/css/home-ins.css
@@ -1,7 +1,19 @@
 .home-ins {
-    position: relative;
-    bottom: 64px;
-    height: 700px;
-    background: linear-gradient(-45deg, rgba(130,29,200,1) 0%, rgb(33, 175, 208,1) 100%);
-    /* background-image: linear-gradient(to right bottom, #21afd0, rgba(147,26,222,0.83)); */
-  }
+  position: relative;
+  bottom: 64px;
+  height: 700px;
+  background: linear-gradient(
+    -45deg,
+    rgba(130, 29, 200, 1) 0%,
+    rgb(33, 175, 208, 1) 100%
+  );
+  /* background-image: linear-gradient(to right bottom, #21afd0, rgba(147,26,222,0.83)); */
+}
+
+.ins-content{
+    padding-top: 64px;
+}
+
+.ins-left {
+  width: 50%;
+}
