--- a/assets/css/home-ins.css
+++ b/assets/css/home-ins.css
@@ -1,19 +1,73 @@
 .home-ins {
   position: relative;
   bottom: 64px;
-  height: 700px;
+  height: 600px;
   background: linear-gradient(
     -45deg,
     rgba(130, 29, 200, 1) 0%,
     rgb(33, 175, 208, 1) 100%
   );
-  /* background-image: linear-gradient(to right bottom, #21afd0, rgba(147,26,222,0.83)); */
 }
 
-.ins-content{
-    padding-top: 64px;
+.ins-content {
+  margin: auto;
+  padding-top: 180px;
+  width: 70%;
 }
 
 .ins-left {
   width: 50%;
+}
+
+/* 最新消息 */
+.ins-news {
+  width: 370px;
+  height: 50px;
+  line-height: 50px;
+  background: rgba(51, 122, 183, 0.5);
+  border-radius: 30px;
+}
+
+.ins-news-logo {
+  margin-left: 18px;
+  margin-right: 10px;
+  margin-top: 12.5px;
+  margin-bottom: 12.5px;
+  width: 50px;
+  height: 25px;
+  line-height: 25px;
+  text-align: center;
+  border-radius: 30px;
+  background: rgb(150, 24, 189);
+  float: left;
+}
+
+.ins-news-title {
+  margin: 0;
+  width: 260px;
+  float: left;
+}
+
+.ins-arrow {
+  margin-top: 17px;
+  margin-bottom: 17px;
+  margin-right: 10px;
+  width: 20px;
+  height: 20px;
+  background: url("../img/arrow.svg") no-repeat center center;
+  float: right;
+}
+
+/* 主页大标题 */
+.ins-title {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  width: 100%;
+  font-size: xx-large;
+}
+
+@media screen and (min-width: 0px) and (max-width: 1450px) {
+  .ins-content {
+    width: 90%;
+  }
 }
