--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,12 +1,12 @@
 @import url("navigation.css");
-@import url("container.css");
 @import url("icon.css");
 @import url("feature-list.css");
 @import url("logo.css");
 @import url("whole.css");
 @import url("bottom.css");
 @import url("home-ins.css");
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,900");
+@import url("previous.css");
+
 
 html,
 body,
