--- a/assets/css/bottom.css
+++ b/assets/css/bottom.css
@@ -1,6 +1,19 @@
 .bottom {
   background-color: #000000;
-  height: 300px;
+  height: 200px;
   width: 100%;
   z-index: -1;
+}
+
+.bottom-logo{
+  margin: auto;
+  width: 44px;
+}
+
+.bottom-label{
+  margin: auto;
+  width: 300px;
+  text-align: center;
+  font-size: xx-small;
+  color: darkgrey;
 }
