--- a/assets/css/bottom.css
+++ b/assets/css/bottom.css
@@ -1,8 +1,31 @@
 .bottom {
   background-color: #000000;
-  height: 200px;
+  height: 270px;
   width: 100%;
   z-index: -1;
+  color: darkgrey;
+  font-size: x-small;
+}
+
+.bottom-contact{
+  margin: auto;
+  margin-bottom: 30px;
+  margin-top: 0px;
+  width: 70%;
+}
+
+.home-bottom-special{
+  position: relative;
+  bottom: 32px;
+}
+
+.contact-title{
+  height: 20px;
+  color: #dadada;
+}
+
+.contact-message{
+  height: 15px;
 }
 
 .bottom-logo{
@@ -14,6 +37,20 @@
   margin: auto;
   width: 300px;
   text-align: center;
-  font-size: xx-small;
-  color: darkgrey;
+}
+
+.bottom-line{
+  margin:auto;
+  width: 70%;
+  border: 0.3px solid rgb(58, 58, 58);
+}
+
+@media screen and (min-width: 0px) and (max-width:1450px){
+  .bottom-contact {
+    width: 90%;
+  }
+
+  .bottom-line{
+    width: 90%;
+  }
 }
