--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -10,6 +10,7 @@
   width: 100%;
   font-size: x-small;
   height: auto;
+  z-index: 30000;
 }
 
 .news-text {
@@ -61,6 +62,8 @@
   background: #ffffff;
   color: #262626;
   margin-bottom: 32px;
+  box-shadow: 0 3px 8px 0px #f3f3f3;
+  z-index: 0;
 }
 
 .navigation-content {
