--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -1,11 +1,30 @@
 .sidebar {
   position: fixed;
-  border-right: 1px solid #e0e0e0;
+  border-right: 1px solid #f3f3f3;
   height: 100%;
-  width: 20%;
+  width: 16%;
+  color: #474747;
+  font-size: 14px;
+}
+
+.know-name {
+  padding-left: 25px;
+  height: 45px;
+  line-height: 40px;
+}
+
+.know-name-focus{
+    color: #40a9ff;
+}
+
+.chapter {
+  padding-left: 40px;
+  height: 45px;
+  line-height: 35px;
+  background: rgb(250,250,250);
 }
 
 .right-content {
-  width: 80%;
+  width: 84%;
   float: right;
 }
