增加超链接和右边内容

--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -13,15 +13,16 @@
   line-height: 40px;
 }
 
-.know-name-focus{
-    color: #40a9ff;
+.know-name-focus {
+  color: #40a9ff;
 }
 
 .chapter {
   padding-left: 40px;
   height: 45px;
   line-height: 35px;
-  background: rgb(250,250,250);
+  background: rgb(250, 250, 250);
+  color: #474747;
 }
 
 .right-content {
