--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -11,6 +11,7 @@
   padding-left: 25px;
   height: 45px;
   line-height: 40px;
+  font-weight: bold;
 }
 
 .know-name-focus {
@@ -20,7 +21,18 @@
 .chapter {
   padding-left: 40px;
   height: 45px;
-  line-height: 35px;
+  line-height: 45px;
   background: rgb(250, 250, 250);
   color: #474747;
+}
+
+.chapter:hover {
+  color: #40a9ff;
+  background-color: rgb(230, 247, 255, 1);
+}
+
+.chapter-choosen {
+  color: #40a9ff;
+  background-color: rgb(230, 247, 255, 1);
+  border-right: 3px solid #40a9ff;
 }
