--- a/assets/css/right-content.css
+++ b/assets/css/right-content.css
@@ -5,13 +5,23 @@
 
 .right-content h1 {
   margin-top: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 50px;
   text-align: center;
+  font-size: xx-large;
+}
+
+.right-content h2 {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: 10%;
   font-size: x-large;
 }
 
 .right-content p {
+  margin-bottom: 15px;
+  margin-top: 0;
   margin-left: 10%;
+  margin-right: 10%;
   color: #474747;
   font-size: 14px;
 }
