--- a/assets/css/right-content.css
+++ b/assets/css/right-content.css
@@ -2,6 +2,11 @@
   padding-left: 16%;
 }
 
+.content-content {
+  padding-left: 10%;
+  padding-right: 10%;
+}
+
 .right-content h1 {
   margin-top: 20px;
   margin-bottom: 50px;
@@ -12,15 +17,17 @@
 .right-content h2 {
   margin-top: 20px;
   margin-bottom: 20px;
-  margin-left: 10%;
   font-size: x-large;
 }
 
+.right-content h3 {
+  margin-top: 20px;
+  color: #40a9ff;
+}
+
 .right-content p {
-  margin-bottom: 15px;
-  margin-top: 0;
-  margin-left: 10%;
-  margin-right: 10%;
+  margin-bottom: 5px;
   color: #474747;
   font-size: 14px;
+  line-height: 30px;
 }
