--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -1,8 +1,9 @@
 .sidebar {
   position: fixed;
   border-right: 1px solid #f3f3f3;
-  height: 100%;
+  height: 85%;
   width: 16%;
+  overflow:auto;
   color: #474747;
   font-size: 14px;
 }
