--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,7 @@
 @import url("previous.css");
 @import url("sidebar.css");
 @import url("right-content.css");
+@import url("outline.css");
 
 html,
 body,
