--- a/assets/css/right-content.css
+++ b/assets/css/right-content.css
@@ -1,5 +1,6 @@
 .right-content {
   padding-left: 16%;
+  z-index: -1;
 }
 
 .content-content {
@@ -36,14 +37,16 @@
 }
 
 .right-content pre{
+  /* 子元素code加了position:relative后层级错乱，需要父元素也添加position:relative并添加z-index。 */
+  position: relative;
   margin-bottom: 10px;
-  background: #f3f3f3;
   border-radius: 10px;
-  padding-left: -10px;
+  background: #f3f3f3;
   color: #474747;
   font-family: monospace;
   font-size: small;
   line-height: 20px;
+  z-index: -1;
 }
 
 .right-content code{
