--- a/assets/css/right-content.css
+++ b/assets/css/right-content.css
@@ -5,7 +5,8 @@
 
 .content-content {
   padding-left: 10%;
-  padding-right: 20%;
+  padding-right: 25%;
+  margin-bottom: 300px;
 }
 
 .right-content h1 {
