使用新办法

--- a/assets/css/right-content.css
+++ b/assets/css/right-content.css
@@ -31,8 +31,8 @@
 }
 
 .right-content p {
-  margin-bottom: 10px;
-  color: #474747;
+  margin: 0px;
+  color: #242424;
   font-size: 14px;
   line-height: 30px;
 }
