--- a/assets/css/right-content.css
+++ b/assets/css/right-content.css
@@ -13,14 +13,14 @@
   margin-top: 20px;
   margin-bottom: 50px;
   text-align: center;
-  font-size: xx-large;
+  font-size: 35px;
   color: #40a9ff;
 }
 
 .right-content h2 {
   margin-top: 20px;
   margin-bottom: 20px;
-  font-size: x-large;
+  font-size: 27px;
   color: #40a9ff;
 }
 
@@ -39,25 +39,29 @@
   /* white-space: pre-line; */
 }
 
-.right-content table{
+.right-content a {
+  color: #40a9ff;
+}
+
+.right-content table {
   color: #242424;
   font-size: small;
 }
 
-.right-content pre{
+.right-content pre {
   /* 子元素code加了position:relative后层级错乱，需要父元素也添加position:relative并添加z-index。 */
   position: relative;
   margin-bottom: 10px;
   border-radius: 10px;
-  background: #f3f3f3;
-  color: #474747;
+  background: #474747;
+  color: #f3f3f3;
   font-family: monospace;
   font-size: small;
   line-height: 20px;
   z-index: -1;
 }
 
-.right-content code{
+.right-content code {
   position: relative;
   left: -50px;
 }
