--- a/assets/css/right-content.css
+++ b/assets/css/right-content.css
@@ -14,7 +14,7 @@
   margin-bottom: 50px;
   text-align: center;
   font-size: 35px;
-  color: #40a9ff;
+  /* color: #40a9ff; */
 }
 
 .right-content h2 {
