--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,6 +8,7 @@
 @import url("sidebar.css");
 @import url("right-content.css");
 @import url("outline.css");
+@import url("hot.css");
 
 html,
 body,
