--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -24,7 +24,6 @@
   top: 0;
   height: 64px;
   z-index: 20000;
-  /* background-color: rgba(255, 255, 255, 0.3); */
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
 }
@@ -61,11 +60,13 @@
 }
 
 .navigation-unhome {
-  background: #ffffff;
   color: #262626;
   margin-bottom: 32px;
   box-shadow: 0 3px 8px 0px #f3f3f3;
   z-index: 0;
+  background-color: rgba(255, 255, 255, 0.3);
+  -webkit-backdrop-filter: blur(20px);
+  backdrop-filter: blur(20px);
 }
 
 .navigation-content {
