--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -149,4 +149,15 @@
   .navigation-content {
     width: 90%;
   }
+
+}
+
+/* @media screen and (min-width:) {
+  
+} */
+
+@media screen and (min-width:0px) and (max-width: 680px) {
+  .navigation-choice{
+    display: none;
+  }
 }
