调整响应式

--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -152,12 +152,18 @@
 
 }
 
-/* @media screen and (min-width:) {
-  
-} */
-
 @media screen and (min-width:0px) and (max-width: 680px) {
   .navigation-choice{
     display: none;
+  }
+}
+
+@media screen and (min-width:0px) and (max-width: 570px) {
+  /* .news {
+    padding: 0 5px;
+  } */
+
+  .news-text {
+    width: 95%;
   }
 }
