--- a/assets/css/home-ins.css
+++ b/assets/css/home-ins.css
@@ -24,7 +24,7 @@
   width: 370px;
   height: 50px;
   line-height: 50px;
-  background: rgba(51, 122, 183, 0.5);
+  background: rgba(51, 122, 183, 0.3);
   border-radius: 30px;
 }
 
@@ -58,7 +58,6 @@
   float: right;
 }
 
-/* 主页大标题 */
 .ins-title {
   margin-top: 30px;
   margin-bottom: 30px;
@@ -74,5 +73,17 @@
 @media screen and (min-width: 0px) and (max-width: 1450px) {
   .ins-content {
     width: 90%;
+  }
+}
+
+@media screen and (min-width: 0px) and (max-width: 650px) {
+  .ins-ins{
+    width: 380px;
+  }
+}
+
+@media screen and (min-width: 0px) and (max-width: 430px) {
+  .ins-title {
+    width: 300px;
   }
 }
