--- a/assets/css/bottom.css
+++ b/assets/css/bottom.css
@@ -3,7 +3,6 @@
   height: 250px;
   width: 100%;
   z-index: -1;
-  color: darkgrey;
   font-size: x-small;
 }
 
@@ -24,6 +23,7 @@
 }
 
 .contact-message {
+  color: rgb(150, 150, 150);
   height: 15px;
 }
 
@@ -36,6 +36,7 @@
   margin: auto;
   width: 300px;
   text-align: center;
+  color: darkgrey;
 }
 
 .bottom-line {
