--- a/assets/css/home-ins.css
+++ b/assets/css/home-ins.css
@@ -66,7 +66,7 @@
   font-size: xx-large;
 }
 
-.ins-ins{
+.ins-ins {
   width: 600px;
 }
 
@@ -77,7 +77,7 @@
 }
 
 @media screen and (min-width: 0px) and (max-width: 650px) {
-  .ins-ins{
+  .ins-ins {
     width: 380px;
   }
 }
@@ -85,5 +85,17 @@
 @media screen and (min-width: 0px) and (max-width: 430px) {
   .ins-title {
     width: 300px;
+  }
+}
+
+@media screen and (min-width: 0px) and (max-width: 376px) {
+  .ins-news {
+    width: 300px;
+  }
+  .ins-news-title {
+    width: 190px;
+  }
+  .ins-ins {
+    width: 310px;
   }
 }
