--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -22,8 +22,24 @@
   position: sticky;
   position: -webkit-sticky; /* Safari */
   top: 0;
-  height: 64px;
   z-index: 20000;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+}
+
+.navigation-content {
+  margin: auto;
+  height: 64px;
+  width: 70%;
+}
+
+.mobile-nav {
+  /* position: fixed; */
+  /* position: absolute; */
+  height: 400px;
+  width: 100%;
+  /* z-index: 20000; */
+  /* background-color: rgba(255, 255, 255, 1); */
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
 }
@@ -66,12 +82,6 @@
   background-color: rgba(255, 255, 255, 0.3);
   -webkit-backdrop-filter: blur(20px);
   backdrop-filter: blur(20px);
-}
-
-.navigation-content {
-  margin: auto;
-  width: 70%;
-  color: inherit;
 }
 
 .navigation-choice {
@@ -133,7 +143,7 @@
   height: 30px;
 }
 
-.mobile-nav {
+.mobile-nav-control {
   display: none;
 }
 
@@ -159,7 +169,7 @@
   .navigation-choice {
     display: none;
   }
-  .mobile-nav {
+  .mobile-nav-control {
     display: inline;
     margin-top: 17px;
     margin-bottom: 17px;
