--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -33,16 +33,21 @@
   width: 70%;
 }
 
+.test {
+  position: absolute;
+  top: 64px;
+}
+
 .mobile-nav {
   display: none;
-  /* position: fixed; */
-  /* position: absolute; */
+  position: fixed;
+  top: 64px;
   height: 400px;
   width: 100%;
-  /* z-index: 20000; */
-  /* background-color: rgba(255, 255, 255, 1); */
+  /* background-color: rgba(255, 255, 255, 0.3); */
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
+  z-index: 20000;
 }
 
 /* 头像 */
