算是做好弹出navigation了

--- a/assets/css/mobile-nav.css
+++ b/assets/css/mobile-nav.css
@@ -2,11 +2,10 @@
   display: none;
   position: fixed;
   top: 64px;
-  height: 400px;
+  /* height: 400px; */
   width: 100%;
-  /* background-color: rgba(255, 255, 255, 0.3); */
-  -webkit-backdrop-filter: blur(20px);
-  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(15px);
+  backdrop-filter: blur(15px);
   z-index: 20000;
 }
 
@@ -15,6 +14,21 @@
   padding: 10px;
   width: 50%;
   text-align: center;
-  height: 70px;
+  height: 60px;
+  line-height: 60px;
   font-size: x-large;
+}
+
+.mobile-nav-bottom {
+  margin-top: 30px;
+  margin-bottom: 15px;
+  width: 100%;
+}
+
+.mobile-nav-bottom-line {
+  margin: auto;
+  width: 50px;
+  height: 5px;
+  border-radius: 5px;
+  background: rgba(231, 231, 231, 0.326);
 }
