--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -23,8 +23,14 @@
   position: -webkit-sticky; /* Safari */
   top: 0;
   z-index: 20000;
-  -webkit-backdrop-filter: blur(20px);
-  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(15px);
+  backdrop-filter: blur(15px);
+}
+
+.navigation-unhome {
+  color: #262626;
+  box-shadow: 0 3px 8px 0px #f3f3f3;
+  background-color: white;
 }
 
 .navigation-content {
@@ -62,15 +68,6 @@
 .logo1 {
   margin-right: 5px;
   color: inherit;
-}
-
-.navigation-unhome {
-  color: #262626;
-  /* margin-bottom: 32px; */
-  box-shadow: 0 3px 8px 0px #f3f3f3;
-  background-color: rgba(255, 255, 255, 0.3);
-  -webkit-backdrop-filter: blur(20px);
-  backdrop-filter: blur(20px);
 }
 
 .navigation-choice {
