--- a/assets/css/home-ins.css
+++ b/assets/css/home-ins.css
@@ -1,10 +1,11 @@
 .home-ins {
   position: relative;
-  bottom: 64px;
+  top: -50px;
   height: 800px;
+  z-index: -1;
   background: linear-gradient(
     -45deg,
-    rgba(130, 29, 200, 1) 0%,
+    rgba(130, 29, 200, 1) 20%,
     rgb(33, 175, 208, 1) 100%
   );
 }
