--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -35,16 +35,38 @@
   z-index: 10;
 }
 
-.navigation-unhome {
-  color: #262626;
-  box-shadow: 0 3px 8px 0px #f3f3f3;
-  background-color: white;
+.navigation-choice {
+  position: absolute;
+  width: 450px;
+  height: 50px;
+  float: right;
+  z-index: 20;
 }
 
-.navigation-content {
-  margin: auto;
-  height: 64px;
-  width: 70%;
+@font-face
+{
+    font-family: dacing-script;
+    src: url(../img/dacing-script.ttf);
+}
+
+/* logo */
+.logo {
+  position: absolute;
+  width: 100%;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  font-size: 40px;
+  font-family: dacing-script;
+  z-index: 20;
+}
+
+
+
+.choice {
+  margin-left: 25px;
+  float: left;
+  font-size: 13px;
 }
 
 /* 头像 */
@@ -63,33 +85,7 @@
   background: url("../img/astro.svg") no-repeat center center;
 }
 
-/* 名字 */
-.logo {
-  margin-top: 10px;
-  height: 40px;
-  line-height: 20px;
-  color: #ffffff;
-  font-size: 20px;
-  float: left;
-}
 
-.logo1 {
-  margin-right: 5px;
-  color: inherit;
-}
-
-.navigation-choice {
-  width: 450px;
-  height: 64px;
-  line-height: 64px;
-  font-size: 13px;
-  float: right;
-}
-
-.choice {
-  margin-left: 25px;
-  float: left;
-}
 
 .choice:hover {
   height: 60px;
@@ -153,24 +149,11 @@
   .news-text {
     width: 90%;
   }
-
-  .navigation-content {
-    width: 90%;
-  }
 }
 
-@media screen and (min-width: 0px) and (max-width: 680px) {
+@media screen and (min-width: 0px) and (max-width: 900px) {
   .navigation-choice {
     display: none;
-  }
-  .mobile-nav-control {
-    display: inline;
-    margin-top: 17px;
-    margin-bottom: 17px;
-    width: 30px;
-    height: 30px;
-    float: right;
-    background: url("../img/more-white.svg") no-repeat center center;
   }
 }
 
