--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,13 +1,11 @@
 @import url("navigation.css");
-@import url("icon.css");
-@import url("whole.css");
 @import url("bottom.css");
 @import url("home-ins.css");
-@import url("previous.css");
 @import url("sidebar.css");
 @import url("right-content.css");
 @import url("outline.css");
 @import url("mobile-nav.css");
+@import url("font.css");
 
 html,
 body,
