--- a/assets/css/home-ins.css
+++ b/assets/css/home-ins.css
@@ -5,8 +5,8 @@
   z-index: -1;
   background: linear-gradient(
     -45deg,
-    rgba(130, 29, 200, 1) 20%,
-    rgb(33, 175, 208, 1) 100%
+    rgb(136, 23, 216) 20%,
+    rgb(37, 188, 223) 100%
   );
 }
 
