给小尺寸设置响应式背景色

--- a/assets/css/home-ins.css
+++ b/assets/css/home-ins.css
@@ -1,7 +1,7 @@
 .home-ins {
   position: relative;
   top: -50px;
-  height: 800px;
+  height: 700px;
   z-index: -1;
   background: linear-gradient(
     -45deg,
@@ -86,6 +86,17 @@
 @media screen and (min-width: 0px) and (max-width: 430px) {
   .ins-title {
     width: 300px;
+  }
+  .home-ins {
+    position: relative;
+    top: -50px;
+    height: 700px;
+    z-index: -1;
+    background: linear-gradient(
+      -45deg,
+      rgb(149, 0, 255) 20%,
+      rgb(0, 238, 255) 100%
+    );
   }
 }
 
