--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -1,13 +1,5 @@
-.inner-header {
-  background-color: rgba(0, 0, 0, 1);
-  width: 100%;
-  height: 50px;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-}
-
 .inner-header-icon {
+  display: none;
   height: 50px;
   font-size: 25px;
   text-align: center;
@@ -99,6 +91,12 @@
   }
 }
 
+@media screen and (min-width: 0px) and (max-width: 600px) {
+  .inner-header-icon {
+    display: inline;
+  }
+}
+
 .inner-nav {
   background-color: rgba(0, 0, 0, 0.9);
   width: 100%;
@@ -108,6 +106,7 @@
   padding-top: 30px;
   padding-bottom: 80px;
   display: none;
+  z-index: 40;
 }
 
 .inner-nav a {
