--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -31,15 +31,6 @@
   z-index: 20;
 }
 
-.dropdown {
-  position: absolute;
-  height: 50px;
-  width: 100%;
-  -webkit-backdrop-filter: blur(15px);
-  backdrop-filter: blur(15px);
-  z-index: 10;
-}
-
 /* logo */
 .logo {
   height: 50px;
@@ -103,6 +94,44 @@
 
 .github-black {
   background: url("../img/github-black.svg") no-repeat center center;
+}
+
+.dropdown {
+  position: absolute;
+  height: 50px;
+  width: 100%;
+  -webkit-backdrop-filter: blur(15px);
+  backdrop-filter: blur(15px);
+  z-index: 10;
+}
+
+.dropdown-menu{
+  position: relative;
+  top: 50px;
+  margin: auto;
+  margin-top: 15px;
+  width: 80%;
+  height: 350px;
+  display: none;
+}
+
+.dropdown-line{
+  position: relative;
+  top: 49px;
+  margin: auto;
+  width: 100%;
+  border: 0.9px solid #ddd;
+  display: none;
+}
+
+.dropdown-menu hr{
+  /* margin: 0; */
+  height: 1px;
+}
+
+.dropdown-menu a p{
+  font-size: 17px;
+  margin: 0;
 }
 
 @media screen and (min-width: 0px) and (max-width: 1450px) {
